# Ulauncher

./: .coderabbit.yaml  .dockerignore  .editorconfig  .flake8  .gitignore  .pylintrc  .quickly  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.build  Dockerfile.build-appimage  Dockerfile.build-arch  Dockerfile.build-rpm  LICENSE  PKGBUILD.template  README.md  _typos.toml  clear_user_data  cliff.toml  conftest.py  create_deb  dbus.xml  default.nix  dev-clean.sh  dev-nkpy.sh  dev-run.sh  extensions.md  flake.nix  glade  install.sh  install_deps  io.ulauncher.Ulauncher.desktop  io.ulauncher.Ulauncher.service  lefthook.toml  (+23 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: extensions.yml
.github/ISSUE_TEMPLATE/: 1_Bug_report.md  1_Extension_isnt_working.md  2_Bug_report.md  2_Feature_request.md  4_Question.md  bug_report.yml  config.yml  enhancement_request.yml  feature_request.yml
.github/workflows/: checks.yml  draft-release.yml  lint.yml  lunar-release.yml  perf.yml  pr-annotate.yml  publish-release.yml  release.yml  test-and-release.yml  tests.yml
.zed/: settings.json
apt/: .gitignore  COMPARISON.md  INDEX.md  MIGRATION.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.md  WORKFLOW.md  nfpm.yaml
apt/scripts/: build.sh  publish.sh  sign.sh
build-utils/: appimage-container.sh  aur-update.py  aur_key.enc  build-deb.sh  build-doc.sh  build-preferences.sh  build-rpm.sh  build-targz.sh  create-appimage.sh  create-build-image.sh  create-build-images.sh  dev-container.sh  env.sh  extract-launchpad-ssh.sh  functions.sh  launchpad-secret.key.enc  release.sh  run-on-pull-request.sh  send-sighup.sh  travis-after-deploy.sh  travis-cli-container.sh  travis-test.sh  watch-doc.sh  watchdoc.sh
contrib/systemd/: ulauncher.service
data/: preferences.css
data/preferences/: .eslintrc.js  .gitignore  .prettierrc  README.md  bower.json  gulp  gulpfile.js  index.html  index.tmpl.html  package.json
data/styles/: preferences.css  reset.css
data/themes/: adwaita.css  dark.css  light.css  ubuntu.css
data/timer-shortcut/: timer.py.src
data/ui/: AboutUlauncherDialog.ui  HotkeyDialog.ui  PreferencesUlauncherDialog.ui  Ulauncher.css  UlauncherWindow.ui  about_ulauncher_dialog.xml  app_result_item.ui  app_result_item.xml  file_item.xml  hotkey_dialog.ui  hotkey_dialog.xml  preferences.css  preferences_ulauncher_dialog.xml  reset.css  result.ui  result.xml  result_item.ui  result_item.xml  small_result.ui  small_result_item.ui  ulauncher.css  ulauncher_window.ui  ulauncher_window.xml
debian/: changelog  control  copyright  rules
docs/: Makefile  conf.py  diagram-source.txt  index.rst  requirements.txt
docs/architecture/: base_data_class.md  basedataclass.md  eventbus.md  extension-ipc.md  json_conf.md  json_key_value_conf.md  jsonconf.md  mode-system.md  singleton.md
docs/extensions/: actions.rst  api-reference.rst  debugging.rst  events.rst  examples.rst  intro.rst  libs.rst  migration.rst  tutorial.rst
docs/source/: modules.rst  ulauncher.api.client.rst  ulauncher.api.result.rst  ulauncher.api.rst  ulauncher.api.server.rst  ulauncher.api.shared.action.rst  ulauncher.api.shared.item.rst  ulauncher.api.shared.rst  ulauncher.internals.rst  ulauncher.modes.apps.rst  ulauncher.modes.calc.rst  ulauncher.modes.extensions.rst  ulauncher.modes.file_browser.alt_menu.rst  ulauncher.modes.file_browser.rst  ulauncher.modes.rst  ulauncher.modes.shortcuts.rst  ulauncher.rst  ulauncher.search.apps.rst  ulauncher.search.calc.rst  ulauncher.search.file_browser.alt_menu.rst  ulauncher.search.file_browser.rst  ulauncher.search.rst  ulauncher.search.shortcuts.rst  ulauncher.ui.rst  ulauncher.ui.windows.rst  ulauncher.util.db.rst  ulauncher.util.decorator.rst  ulauncher.util.desktop.rst  ulauncher.util.rst  ulauncher.utils.db.rst  ulauncher.utils.decorator.rst  ulauncher.utils.desktop.rst  ulauncher.utils.rst
docs/themes/: themes.rst
help/C/: index.page  preferences.page  topic1.page
nix/: default.nix
preferences-src/: README.md  build.js  dev-server.js  index.html  package.json  webpack.base.conf.js  webpack.build.conf.js  webpack.debug.conf.js
preferences-src/config/: dev.env.js  index.js
preferences-src/src/: App.vue  main.js  store.js
preferences-src/static/: font-awesome.min.css  variables.css
scripts/: aur-update.py  build-deb.sh  build-doc.sh  build-preferences.sh  build-release.sh  build-rpm.sh  build-targz.sh  cleanup-dev-env.sh  common.sh  create-build-images.sh  dev-cleanup.sh  dev-container.sh  dput.cf  edit-ui.sh  extract-launchpad-ssh.sh  help.sh  init-dev-env.sh  launchpad-public.key.enc  launchpad.ssh.tar.enc  make-release.sh  rm-python-cache.sh  run-ci.sh  send-signal.sh  tag-release.sh  tests.sh  travis-cli-container.sh  travis-test.sh  watch-doc.sh
scripts/dockerfiles/: Dockerfile.arch  Dockerfile.fedora-28  Dockerfile.fedora-29  Dockerfile.fedora-30  Dockerfile.fedora-31  Dockerfile.fedora-32  Dockerfile.fedora-33  Dockerfile.suse-42.3
tests/: conftest.py  test_bin_ulauncher.py  test_bootstrap_flags.py  test_cli.py  test_core.py  test_example.py  test_helpers.py  test_lint.py
tests/api/: test_extension.py  test_socket_client.py
tests/data/: test_json_conf.py  test_json_key_value_conf.py
tests/ext/: test_Query.py
tests/internals/: test_effect_utils.py  test_effects.py  test_result_buffer.py
tests/modes/: test_ModeHandler.py  test_Query.py  test_Search.py  test_query.py
tests/result_list/: test_SortedResultList.py
tests/results/: test_IconLoader.py  (+2 more)
ulauncher/: AboutUlauncherDialog.py  AutostartPreference.py  Indicator.py  PreferencesUlauncherDialog.py  UlauncherWindow.py  __init__.py  __main__.py  _version.py  app.py  cli.py  config.py  core.py  gi.py  helpers.py  init_helpers.py  interfaces.py  interfaces.pyi  main.py  paths.py  service_locator.py
ulauncher_lib/: AboutDialog.py  Builder.py  Display.py  IconTray.py  PreferencesDialog.py  Settings.py  Window.py  __init__.py  helpers.py  ulauncherconfig.py
(+775 files in other folders)
