[metadata]
name = ulauncher
version = 6.0.0
url = http://ulauncher.io/
author = Aleksandr Gornostal
maintainer = Albin Larsson
maintainer_email = mail@albinlarsson.com
description = Application launcher for Linux
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linux, desktop, application, launcher, gtk
license = GPL-3
license_file = LICENSE
python_requires = >=3.6.0
project_urls = 
	Bug Tracker = https://github.com/Ulauncher/Ulauncher/issues
classifiers = 
	Development Status :: 4 - Beta
	Environment :: X11 Applications
	Environment :: X11 Applications :: GTK
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: POSIX
	Operating System :: Unix

[options]
zip_safe = false
include_package_data = true
scripts = 
	bin/ulauncher
	bin/ulauncher-toggle
install_requires = 
	dbus-python
	pyinotify
	pycairo
	PyGObject
	python-Levenshtein
	pyxdg
	websocket-client

[flake8]
exclude = docs,data,scripts
max-line-length = 120
ignore = E402,W504

[mypy]
python_version = 3.6
ignore_missing_imports = True
check_untyped_defs = False

[tool:pytest]
pep8maxlinelength = 120
pep8ignore = E402

[bdist_rpm_fedora]
release = 1
packager = Aleksandr Gornostal <ulauncher.app@gmail.com>
doc_files = LICENSE
group = Applications/Productivity
build_requires = gcc,make,python3-setuptools
requires = gobject-introspection
	keybinder3
	webkitgtk4
	python3-dbus
	python3-cairo
	python3-gobject
	python3-pyxdg
	python3-inotify
	python3-Levenshtein
	python3-websocket-client

