[metadata]
name = ulauncher
version = 6.0.0
url = http://ulauncher.io/
author = Aleksandr Gornostal
maintainer = Albin Larsson
maintainer_email = mail@albinlarsson.com
description = Application launcher for Linux
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linux, desktop, application, launcher, gtk
license = GPL-3
python_requires = >=3.6.0
project_urls = 
	Bug Tracker = https://github.com/Ulauncher/Ulauncher/issues
classifiers = 
	Development Status :: 4 - Beta
	Environment :: X11 Applications
	Environment :: X11 Applications :: GTK
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: POSIX
	Operating System :: Unix

[options]
zip_safe = false
include_package_data = true
scripts = 
	bin/ulauncher
	bin/ulauncher-toggle
install_requires = 
	pycairo
	PyGObject
	python-Levenshtein

[flake8]
exclude = docs,data,scripts
ignore = E203,E266,E501,W503

[mypy]
python_version = 3.6
ignore_missing_imports = True
check_untyped_defs = False

[gi_versions]
Gtk = 3.0
Gdk = 3.0
GdkX11 = 3.0
GdkPixbuf = 2.0
Keybinder = 3.0
Wnck = 3.0
