[metadata]
name = ulauncher
url = http://ulauncher.io/
author = Aleksandr Gornostal
maintainer = Albin Larsson
maintainer_email = ulauncher@fridaythe14th.com
description = Application launcher for Linux
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linux, desktop, application, launcher, gtk
license = GPL-3
python_requires = >=3.7.0
project_urls = 
	Bug Tracker = https://github.com/Ulauncher/Ulauncher/issues
classifiers = 
	Development Status :: 4 - Beta
	Environment :: X11 Applications
	Environment :: X11 Applications :: GTK
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: POSIX
	Operating System :: Unix

[options]
zip_safe = false
include_package_data = true
scripts = 
	bin/ulauncher
	bin/ulauncher-toggle
install_requires = 
	pycairo
	PyGObject
	python-Levenshtein
